Unify app header with homepage and add page fade-in

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
     </header>
 
     <div class="container-fluid">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 page-fade">
             @RenderBody()
         </main>
     </div>
