--- a/Views/Home/Pricing.cshtml
+++ b/Views/Home/Pricing.cshtml
@@ -101,5 +101,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="row g-4 mb-4">
+            <div class="col-lg-4">
+                <div class="pricing-info h-100 rounded-4 p-4">
+                    <h2 class="h1 mb-3">Minimum Pricing</h2>
+                    <p class="mb-3">All accepted orders below minimum order weight will be charged flat minimum order price.</p>
+                    <p class="mb-3 pricing-highlight fw-semibold">EX. Personal Order 15 lbs will be charged as 20 lbs .</p>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
