Move Minimum Pricing box under Large Item Pricing

--- a/Views/Home/Pricing.cshtml
+++ b/Views/Home/Pricing.cshtml
@@ -57,11 +57,17 @@
         </div>
 
         <div class="row g-4 align-items-start">
-            <div class="col-lg-4">
+            <div class="col-lg-4 d-flex flex-column gap-4">
                 <div class="pricing-info h-100 rounded-4 p-4">
                     <h2 class="h1 mb-3">Large Item Pricing</h2>
                     <p class="mb-3">Large household and bedding items are billed per piece.</p>
                     <p class="mb-0 fw-bold">Minimum charge: $50.00 for large household and bedding item orders.</p>
+                </div>
+
+                <div class="pricing-info h-100 rounded-4 p-4">
+                    <h2 class="h1 mb-3">Minimum Pricing</h2>
+                    <p class="mb-3">All accepted orders below minimum order weight will be charged flat minimum order price.</p>
+                    <p class="mb-3 pricing-highlight fw-semibold">EX. Personal Order 15 lbs will be charged as 20 lbs .</p>
                 </div>
             </div>
 
@@ -102,14 +108,5 @@
             </div>
         </div>
 
-        <div class="row g-4 mb-4">
-            <div class="col-lg-4">
-                <div class="pricing-info h-100 rounded-4 p-4">
-                    <h2 class="h1 mb-3">Minimum Pricing</h2>
-                    <p class="mb-3">All accepted orders below minimum order weight will be charged flat minimum order price.</p>
-                    <p class="mb-3 pricing-highlight fw-semibold">EX. Personal Order 15 lbs will be charged as 20 lbs .</p>
-                </div>
-            </div>
-        </div>
     </div>
 </section>
